# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: admin.py  forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: .env  __init__.py  asgi.py  mixins.py  read_json.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels_alter_task_author_alter_task_executor_and_more.py  0003_alter_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  task_detail.html  tasks.html
task_manager/templates/users/: delete.html  login.html  register.html  update.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0002_remove_customuser_second_name_and_more.py
tasks/: filters.py  forms.py  models.py  urls.py  views.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
