[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Market <kalldrek@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-dotenv = "^1.0.0"
whitenoise = "^6.6.0"
django-filter = "^23.5"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
